# oc_diagdoc

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
benches/: verify_benchmark.rs  yaml_parsing.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DASHBOARD.md  SECURITY.md  SEVERITY.md  commands.md
export/: 0. Contexualizador.md  1. Prompt de solicitud.md  1.0. identidad_y_contexto.md  1.1. identidad.md  1.1.0 vision_onlycar.md  1.1.1 propuesta_valor.md  1.1.2 modelo_negocio.md  1.1.3 mercado_objetivo.md  1.1.4 diferenciadores.md  1.1.5 reglas_comerciales.md  1.1.6 sistema_pagos.md  1.1.7 contratos_b2b.md  1.1.7.1 ciclo_vida_contrato.md  1.1.7.2 plantilla_contrato.md  1.1.7.3 formulario_contrato.md  1.1.7.4 generacion_pdfme.md  1.1.7.5 registro_empresa_b2b.md  1.1.7.5.1 validacion_empresa.md  1.1.7.5.2 gestion_empleados.md  1.1.7.5.3 onboarding_completo.md  1.1.7.6 renovacion_contrato.md  1.1.8 programa_corporate_plus.md  1.1.9 expansion_geografica.md  1.1.9.1 criterios_lanzamiento.md  1.1.9.2 lista_espera_ciudades.md  1.1.9.3 roadmap_geografico.md  1.1.9.4 activacion_ciudad.md  1.2. user_personas.md  1.2.1 admin_perfil.md  1.2.1.1 dashboard_admin.md  1.2.1.2 alertas_admin.md  1.2.1.3 configuracion_sistema.md  1.2.2 operador_perfil.md  1.2.2.1 registro_operador.md  1.2.2.1.1 flujo_solicitud.md  1.2.2.1.1.1 landing_prospecto.md  1.2.2.1.1.2 formulario_solicitud.md  1.2.2.1.1.3 deteccion_ciudad.md  1.2.2.1.2 verificacion_identidad.md  1.2.2.1.2.1 documentos_requeridos.md  (+809 more)
src/: errors.rs  lib.rs  macros.rs  main.rs
src/commands/: archive.rs  audit.rs  batch.rs  ci.rs  compress.rs  coverage.rs  dashboard.rs  deps.rs  diff.rs  export.rs  fix.rs  gen.rs  health.rs  help.rs  init.rs  links.rs  lint.rs  migrate.rs  mod.rs  module.rs  readme.rs  report.rs  restore.rs  search.rs  snapshot.rs  stats.rs  sync.rs  template.rs  trace.rs  tree.rs  verify.rs  verify_helper.rs  watch.rs
src/core/: cli.rs  config.rs  docs.rs  files.rs  fix_router.rs  graph.rs  hash.rs  links.rs  lint_docs.rs  loader.rs  mod.rs  patterns.rs  pipeline.rs  registry.rs  release.rs  schema.rs  yaml.rs
src/data/: document.rs  hierarchy.rs  mod.rs  module.rs  project.rs  report.rs
src/quantum/: cache.rs  healer.rs  memory.rs  mod.rs  oracle.rs  telemetry.rs
src/testing/: fixtures.rs  mocks.rs  mod.rs
src/traits/: cacheable.rs  comparable.rs  conversions.rs  diagnosable.rs  diffable.rs  exportable.rs  fixable.rs  hashable.rs  hierarchical.rs  iterators.rs  mod.rs  queryable.rs  renderable.rs  repairable.rs  scorable.rs  searchable.rs  serializable.rs  validatable.rs  watchable.rs
src/types/: breadcrumb.rs  cow.rs  date.rs  doc_type.rs  hash.rs  id.rs  lifetimes.rs  metrics.rs  mod.rs  path.rs  severity.rs  status.rs
src/ui/: ascii.rs  heatmap.rs  logger.rs  mod.rs  progress.rs  tables.rs  theme.rs
tests/integration/: commands_test.rs  core_test.rs  mod.rs  types_test.rs
