[package]
name = "oc_diagdoc"
version = "3.0.1"
edition = "2021"
rust-version = "1.75"
description = "Motor algorítmico nuclear para documentación OnlyCarNLD"
authors = ["enerbydev <dev@onlycar.mx>"]
license = "MIT"
repository = "git@github.com:enerBydev/oc_diagdoc.git"
homepage = "https://github.com/enerBydev/oc_diagdoc"
documentation = "https://github.com/enerBydev/oc_diagdoc#readme"
readme = "README.md"
keywords = ["documentation", "markdown", "yaml", "cli", "onlycar"]
categories = ["command-line-utilities", "text-processing", "development-tools"]

# ═══════════════════════════════════════════════════════════════
# FEATURE FLAGS
# ═══════════════════════════════════════════════════════════════
[features]
default = ["cli", "cache", "parallel"]
cli = ["clap"]
cache = ["sled"]
git = ["git2"]
parallel = ["rayon"]
watch = ["notify"]
full = ["cli", "cache", "git", "parallel", "watch"]

# ═══════════════════════════════════════════════════════════════
# DEPENDENCIAS PRINCIPALES
# ═══════════════════════════════════════════════════════════════
[dependencies]
# CLI Framework (feature-gated)
clap = { version = "4.4", features = ["derive", "color", "suggestions", "env"], optional = true }

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"

# Procesamiento texto
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Filesystem
walkdir = "2.4"
glob = "0.3"
memmap2 = "0.9"
notify = { version = "6.1", optional = true }
tempfile = "3.9"
zip = "0.6"    # L12: Exportación a ZIP

# Concurrencia (feature-gated)
rayon = { version = "1.8", optional = true }
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# UI/Output
colored = "2.1"
comfy-table = "7.1"
indicatif = "0.17"
textwrap = "0.16"
console = "0.15"
dialoguer = "0.11"

# Tiempo
chrono = { version = "0.4", features = ["serde"] }

# Errores
thiserror = "1.0"
anyhow = "1.0"

# Cache persistente (feature-gated)
sled = { version = "0.34", optional = true }

# Git integration (feature-gated)
git2 = { version = "0.18", optional = true }

# Logging interno
tracing = "0.1"
tracing-subscriber = "0.3"
atty = "0.2.14"
semver = "1.0.27"

# ═══════════════════════════════════════════════════════════════
# DEPENDENCIAS DE DESARROLLO
# ═══════════════════════════════════════════════════════════════
[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
tempdir = "0.3"
proptest = "1.4"
test-case = "3.3"
mockall = "0.12"

# ═══════════════════════════════════════════════════════════════
# PERFILES DE COMPILACIÓN
# ═══════════════════════════════════════════════════════════════
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
lto = true
opt-level = 3

# ═══════════════════════════════════════════════════════════════
# BENCHMARKS
# ═══════════════════════════════════════════════════════════════
[[bench]]
name = "verify_benchmark"
harness = false

[[bench]]
name = "yaml_parsing"
harness = false

# ═══════════════════════════════════════════════════════════════
# BINARIO
# ═══════════════════════════════════════════════════════════════
[[bin]]
name = "oc_diagdoc"
path = "src/main.rs"

[lib]
name = "oc_diagdoc_lib"
path = "src/lib.rs"
